--- a/centos6.5_x64/Makefile
+++ b/centos6.5_x64/Makefile
@@ -54,7 +54,7 @@ all: update epel firewall fail2ban cust setuser btsync clean reboot
 # If you object to installing EPEL, you can run a less opinionated routine 
 # with 'make base' instead of 'make'.
 .PHONY: base
-base: update firewall cust setuser btsync clean reboot
+base: update firewall cust setuser btsync clean
 
 .PHONY: update
 update:
